dynamicArchive/ParallelLambdaLoadTest.java crashes with "assert(is_instance(java_string)) failed: must be java_string"

XMLWordPrintable

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=\\classfile/javaClasses.inline.hpp:60
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:\\workspace\\open\\src\\hotspot\\share\\classfile/javaClasses.inline.hpp:60), pid=20788, tid=67352
      # assert(is_instance(java_string)) failed: must be java_string
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0+21) (fastdebug build 17-ea+21-LTS-1861)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-ea+21-LTS-1861, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_tier2_runtime\\scratch\\4\\hs_err_pid20788.mdmp
      #

      Stack: [0x000000562b300000,0x000000562b400000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xacde41] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:235)
      V [jvm.dll+0xcf0707] VMError::report+0xfc7 (vmError.cpp:739)
      V [jvm.dll+0xcf208e] VMError::report_and_die+0x7fe (vmError.cpp:1549)
      V [jvm.dll+0xcf27a4] VMError::report_and_die+0x64 (vmError.cpp:1330)
      V [jvm.dll+0x4ce687] report_vm_error+0xb7 (debug.cpp:282)
      V [jvm.dll+0x652b46] java_lang_String::value+0x36 (javaClasses.inline.hpp:60)
      V [jvm.dll+0x6afd94] java_lang_String::as_utf8_string+0x14 (javaClasses.cpp:658)
      V [jvm.dll+0x8e9489] LambdaFormInvokers::regenerate_holder_classes+0x4e9 (lambdaFormInvokers.cpp:115)
      V [jvm.dll+0x54f5ab] DynamicArchive::dump+0x6b (dynamicArchive.cpp:373)
      V [jvm.dll+0x6a9850] before_exit+0x620 (java.cpp:508)
      V [jvm.dll+0xc78fdd] Threads::destroy_vm+0x3ad (thread.cpp:3395)
      V [jvm.dll+0x74123c] jni_DestroyJavaVM+0xac (jni.cpp:3746)
      C [jli.dll+0x5317] JavaMain+0x18b (java.c:558)
      C [ucrtbase.dll+0x2268a]
      C [KERNEL32.DLL+0x17974]
      C [ntdll.dll+0x5a2f1]

            Assignee:
            Yumin Qi
            Reporter:
            Calvin Cheung (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: