8266576: dynamicArchive/ParallelLambdaLoadTest.java crashes in tier2 testing